--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^7.3.0",
     "csv-parse": "^6.1.0",
+    "dialogflow": "^1.2.0",
+    "google-auth-library": "^10.5.0",
     "next": "16.0.1",
+    "node-fetch": "^3.3.2",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/dialogflow": "^1.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
