--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-fetch": "^3.3.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
