--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-parse": "^6.1.0",
     "dialogflow": "^1.2.0",
     "google-auth-library": "^10.5.0",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "node-fetch": "^3.3.2",
     "react": "19.2.0",
